# docdb-perf-tools

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  perflab.example.toml
scripts/: collect-results.ps1  docker-build-run.sh  install-pre-reqs.sh  install-pwsh.sh  install-rust.sh  run-bench.ps1  run-benchly.ps1  run-find-and-update-bench.ps1  run-find-bench.ps1  run-read-bench.ps1  run-server-info.ps1  run-update-bench.ps1  run-write-bench.ps1
src/benchly/: .dockerignore  AGGREGATE-WORKLOAD.md  CURSOR-LEAK-WORKLOAD.md  Cargo.toml  Dockerfile  README.md  UPDATE-WORKLOAD.md  generate-report.ps1
src/benchly/src/: aggregator.rs  cli.rs  cursor_leaker.rs  finder.rs  main.rs  metrics.rs  reader.rs  report.rs  stats.rs  updater.rs  writer.rs
