[package]
name = "benchly"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
hdrhistogram = "7"
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
perflab-metrics = "0.1"
toml = "0.9"
